# rust-blog

./: .gitignore  Cargo.toml
src/: main.rs
templates/: home.html  test.html
